--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.23"
+    "mongoose": "^5.13.23",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
